--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <div class="content">
             <p class="word"></p>
             <div class="details">
-                <p class="hint">Thank you for filling out the form correctly.</p>
-                <p class="hint">We will contact you as soon as possible.</p>
+              <p class="hint">I will contact you as soon as possible.</p>
+              <p class="hint">For emergency contact, <br> Email: ashfaquehossainXT@pm.me</p>
             </div>
             <div class="buttons">
                 <button onclick="location.href='https://abirett2.github.io/Hire-me/'" class="check-word">Go Back</button>
