--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Thanks for submitting form | Abirett</title>
+    <title>Thanks for sending message | Abirett</title>
 
     <!-- Favicon -->
     <link rel="icon" href="images/fav_icon.png">
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="container">
-        <h2>Thanks for submitting form</h2>
+        <h2>Thanks for sending message</h2>
         <div class="content">
             <p class="word"></p>
             <div class="details">
